# tlm_adjoint

./: .gitignore  ACKNOWLEDGEMENTS  AUTHORS  INSTALL  LICENSE  README  README.md  conftest.py  flake8.cfg  pyproject.toml  readme.rst  setup.cfg  setup.py
.github/workflows/: test-base.yml  test-fenics.yml  test-firedrake.yml
doc/: manual.tex
doc/examples/: diffusion_adjoint_timestepping.py  diffusion_forward.py
docs/: bibliography.bib  makefile  manual.tex
docs/source/: acknowledgements.rst  conf.py  dependencies.rst  index.rst
examples/basal_sliding/: basal.py  basal_fp.py
examples/diffusion/: diffusion.py
examples/poisson/: poisson.py
examples/transport/: rectangle.geo  transport.py
examples_fenics/basal_sliding/: basal.py  basal_fp.py
examples_fenics/diffusion/: diffusion.py
examples_fenics/poisson/: poisson.py
examples_fenics/transport/: transport.py
tests/: test_base.py  test_recursive_tlm_ref.py  test_timestepping_ref.py  unittests.py
tests_fenics/: unittests.py
tests_firedrake/: unittests.py
tests_numpy/: unittests.py
tlm_adjoint/: __init__.py  adjoint.py  alias.py  binomial_checkpointing.py  block_system.py  cached_hessian.py  caches.py  checkpointing.py  eigendecomposition.py  equation.py  equations.py  fixed_point.py  functional.py  hessian.py  hessian_optimization.py  hessian_system.py  instructions.py  interface.py  jax.py  linear_equation.py  manager.py  markers.py  optimization.py  overloaded_float.py  override.py  patch.py  petsc.py  storage.py  tangent_linear.py  timestepping.py  tlm_adjoint.py  torch.py  verification.py
(+210 files in other folders)
