[project]

name = "tlm_adjoint"
version = "0.9.1dev"
description = "A library for high-level algorithmic differentiation "
readme = "readme.rst"
maintainers = [
    {name="James R. Maddison", email="j.r.maddison@ed.ac.uk"}
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"
]
dependencies = [
    "numpy",
    "sympy"
]

[tool.setuptools]

packages = [
    "tlm_adjoint",
    "tlm_adjoint.checkpoint_schedules",
    "tlm_adjoint.fenics",
    "tlm_adjoint.firedrake"
]

[tool.pytest.ini_options]

markers = [
    "base: backend independent tests",
    "checkpoint_schedules: checkpoint schedules tests",
    "example: example scripts",
    "fenics: tests using the FEniCS backend",
    "firedrake: tests using the Firedrake backend"]

[tool.ruff]

extend-exclude = ["*.ipynb"]
line-length = 79

[tool.ruff.lint]

ignore = ["F403", "F405", "N802", "N803", "N806", "N816", "N817", "UP031"]
preview = true
select = ["E", "EXE", "F", "N", "PIE", "UP", "W"]
